[package]
name = "interview-assist"
version = "0.1.0"
edition = "2021"
default-run = "interview-assist"

[dependencies]
anyhow = "1"
bytemuck = "1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
    "Win32_Media_Audio",
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_Security",
]}
